...
        </mutableArray>
    </customFonts>
    <scenes>
        <!--bclub-->
        <scene sceneID="utm-sN-rgW">
            <objects>
                <navigationController title="bclub" id="uIy-BX-4lA" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yGn-Lv-Hpv">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="TSa-Oc-pGM" kind="relationship" relationship="rootViewController" id="hCc-ow-gCv"/>
...
                                <exclude reference="akn-4c-QdN"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" id="8sR-Bq-AF2"/>
                    <connections>
                        <outlet property="cityFilterButton" destination="cQu-zi-TwH" id="Ui7-7M-1Se"/>
                        <outlet property="tableView" destination="Ola-iD-ay9" id="0yg-Uw-t7E"/>
                        <segue destination="x0C-Pe-ywV" kind="show" identifier="FilteredEstablishmentPromotionDetail" id="mXC-k6-Hwe"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qXq-Fn-1Pp" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="oEE-dC-Xm3" firstAttribute="top" secondItem="VIR-QX-9Ku" secondAttribute="bottom" id="fGL-rw-M41"/>
                            <constraint firstItem="NSv-Zf-K7J" firstAttribute="top" secondItem="oEE-dC-Xm3" secondAttribute="bottom" id="gUf-tu-i4x"/>
                            <constraint firstAttribute="trailing" secondItem="VIR-QX-9Ku" secondAttribute="trailing" id="qwf-XV-IWz"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="B.Club" id="H9r-8t-IgP">
                        <barButtonItem key="leftBarButtonItem" image="UIBarButtonMenu" id="qy2-XM-Y3w" userLabel="Menu">
                            <color key="tintColor" red="0.92941176469999998" green="0.43137254899999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="menuAction:" destination="TSa-Oc-pGM" id="al0-F0-OUL"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="UIBarButtonControl" id="XGA-bm-MmP" userLabel="Filtro">
                            <color key="tintColor" red="0.92941176469999998" green="0.43137254899999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="zSw-Le-JIE" kind="show" identifier="SeguePromotionFilter" id="GQY-qa-Dnk"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
