...
                <rect key="frame" x="0.0" y="0.0" width="320" height="63.5"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xq5-F1-8ag">
                        <rect key="frame" x="20" y="8" width="280" height="47"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Digite o que você procura" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ugD-mK-dvz">
                                <rect key="frame" x="8" y="0.0" width="213" height="47"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                <color key="textColor" red="0.5372549295425415" green="0.5372549295425415" blue="0.5372549295425415" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="16"/>
                                <textInputTraits key="textInputTraits" returnKeyType="go"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FSW-bT-bpX">
                                <rect key="frame" x="229" y="8" width="31" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="HY5-7C-brk"/>
                                    <constraint firstAttribute="width" constant="31" id="vob-dJ-3fI"/>
                                </constraints>
                                <state key="normal" image="magnifiying"/>
                                <connections>
                                    <action selector="buttonClick:" destination="xmX-mJ-sTa" eventType="touchUpInside" id="V2y-NI-EIn"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
