...
    }
    
    // MARK: -
    
    func setup() {
        backgroundImageView = UIImageView()
        backgroundImageView.image = UIImage(named: "splash_image")
        backgroundImageView.accessibilityLabel = "splash_image"
        backgroundImageView.accessibilityIdentifier = "splash_image"
        addSubview(backgroundImageView)
        
        logoImageView = UIImageView()
        logoImageView.image = UIImage(named: "completeLogo")
...
